--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    F"
+    "    for restaurant in resta"
    ]
   },
   {
