--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,8 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    for restaurant in resta"
+    "    for restaurant in restaurants:\n",
+    "        lits"
    ]
   },
   {
