--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,7 @@
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        lits"
+    "        list(map())"
    ]
   },
   {
