--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,8 @@
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        list(map(format_restaurant))"
+    "        list(map(format_restaurant, restaurant))\n",
+    "        "
    ]
   },
   {
