--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
     "def map_format_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        list(map(format_restaurant, restaurant))\n",
-    "        "
+    "    return"
    ]
   },
   {
