--- a/index.ipynb
+++ b/index.ipynb
@@ -340,9 +340,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    for restaurant in restaurants:\n",
-    "        list(map(format_restaurant, restaurant))\n",
-    "    return restaurant"
+    "    return (list)"
    ]
   },
   {
