--- a/index.ipynb
+++ b/index.ipynb
@@ -434,7 +434,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(l))"
+    "    return list(filter(lambda restaurants: not ))"
    ]
   },
   {
