--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
    ]
   },
   {
