--- a/index.ipynb
+++ b/index.ipynb
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    "
+    "    list(filter(lambda: ))"
    ]
   },
   {
